@@ -24,7 +24,7 @@
 			<li> <a href="#basic-pdb">Basic PDB file operations</a> </li>
 			<li> <a href="#propka-titration">Assigning titration states with PROPKA</a> </li>
 			<li> <a href="#ligand-parm">Ligand parameterization</a> </li>
-			<li> <a href="#apbs">Running Poisson-Boltzmann calculations (experimental!)</a> </li>
+			<li> <a href="#apbs">Running Poisson-Boltzmann calculations</a> </li>
 		</ul>
 		<hr>
 		<h2> <a name="basic-pdb" id="basic-pdb"/>
@@ -153,9 +153,9 @@
 		</p>
 		
 		<hr/>
-		<h2> <a name="apbs" id="apbs"/> Running Poisson-Boltzmann calculations (experimental!) </h2>
+		<h2> <a name="apbs" id="apbs"/> Running Poisson-Boltzmann calculations</h2>
 		
-		<p>The <a href="http://apbs.sf.net">APBS</a> web interface is an experimental addition to PDB2PQR, which extends the PDB2PQR web interface by allowing the end user to use the output files from PDB2PQR in a Poisson-Boltzmann electrostatics calculation. The APBS Poisson-Boltzmann calculation can run either locally or on an Opal grid, much like PDB2PQR. </p>
+		<p>The <a href="http://apbs.sf.net">APBS</a> web interface is an addition to PDB2PQR, which extends the PDB2PQR web interface by allowing the end user to use the output files from PDB2PQR in a Poisson-Boltzmann electrostatics calculation. The APBS Poisson-Boltzmann calculation can run either locally or on an Opal grid, much like PDB2PQR. </p>
 		
 		<!-- <p>Through the use of JavaScript, the APBS input page will be interactive and easy to use. The web interface and Python middleware launches the 
 		command line APBS client with the options selected by the user, and then 
